--- a/source/08_disastrOS/disastrOS_01_structures/Makefile
+++ b/source/08_disastrOS/disastrOS_01_structures/Makefile
@@ -1,14 +1,19 @@
 CC=gcc
-CCOPTS=--std=gnu99 -Wall 
+CCOPTS=--std=gnu99 -Wall
 AR=ar
+RM=rm -f
+
+# include local headers
+CPPFLAGS=-I.
 
 HEADERS=disastrOS.h\
 	disastrOS_constants.h\
 	disastrOS_globals.h\
 	disastrOS_pcb.h\
 	disastrOS_syscalls.h\
+	disastrOS_semaphores.h\
 	linked_list.h\
-	pool_allocator.h\
+	pool_allocator.h
 
 OBJS=pool_allocator.o\
      linked_list.o\
@@ -20,28 +25,28 @@ OBJS=pool_allocator.o\
      disastrOS_exit.o\
      disastrOS_shutdown.o\
      disastrOS_schedule.o\
-     disastrOS_preempt.o
+     disastrOS_preempt.o\
+     disastrOS_semaphores.o\
+     disastrOS_sem_syscalls.o
 
 LIBS=libdisastrOS.a
-
 BINS=disastrOS_test
 
 #disastros_test
 
 .phony: clean all
 
+all: $(LIBS) $(BINS)
 
-all:	$(LIBS) $(BINS)
+%.o: %.c $(HEADERS)
+	$(CC) $(CCOPTS) $(CPPFLAGS) -c -o $@ $<
 
-%.o:	%.c $(HEADERS)
-	$(CC) $(CCOPTS) -c -o $@  $<
-
-libdisastrOS.a: $(OBJS) 
+libdisastrOS.a: $(OBJS)
 	$(AR) -rcs $@ $^
 	$(RM) $(OBJS)
 
-disastrOS_test:		disastrOS_test.c $(LIBS)
-	$(CC) $(CCOPTS) -o $@ $^
+disastrOS_test: disastrOS_test.c $(LIBS)
+	$(CC) $(CCOPTS) $(CPPFLAGS) -o $@ $^
 
 clean:
-	rm -rf *.o *~ $(LIBS) $(BINS)
+	$(RM) *.o *~ $(LIBS) $(BINS)
