--- a/source/08_disastrOS/disastrOS_01_structures/Makefile
+++ b/source/08_disastrOS/disastrOS_01_structures/Makefile
@@ -7,13 +7,13 @@ RM=rm -f
 CPPFLAGS=-I.
 
 HEADERS=disastrOS.h\
-        disastrOS_constants.h\
-        disastrOS_globals.h\
-        disastrOS_pcb.h\
-        disastrOS_syscalls.h\
-        disastrOS_semaphores.h\
-        linked_list.h\
-        pool_allocator.h
+	disastrOS_constants.h\
+	disastrOS_globals.h\
+	disastrOS_pcb.h\
+	disastrOS_syscalls.h\
+	disastrOS_semaphores.h\
+	linked_list.h\
+	pool_allocator.h
 
 OBJS=pool_allocator.o\
      linked_list.o\
@@ -30,7 +30,7 @@ OBJS=pool_allocator.o\
      disastrOS_sem_syscalls.o\
 
 LIBS=libdisastrOS.a
-BINS=disastrOS_test
+BINS=disastrOS_test disastrOS_semtest
 
 #disastros_test
 
@@ -46,6 +46,9 @@ libdisastrOS.a: $(OBJS)
 	$(RM) $(OBJS)
 
 disastrOS_test: disastrOS_test.c $(LIBS)
+	$(CC) $(CCOPTS) $(CPPFLAGS) -o $@ $^
+
+disastrOS_semtest: disastrOS_semtest.c $(LIBS)
 	$(CC) $(CCOPTS) $(CPPFLAGS) -o $@ $^
 
 clean:
